--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <!-- AUDIO -->
+  <audio autoplay>
+    <source src="Audio/Audio.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+  
   <!-- MAIN BODY -->
   <div class="wrapper">
     <div class="enter">
