--- a/main.html
+++ b/main.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <!-- AUDIO -->
+  <audio autoplay>
+    <source src="Audio/Audio.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+  
   <!-- HEADER -->
   <div align="center">
     <table class="headerTable">
