--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HOME PAGE</title>
+      <link rel="icon" type="image/gif" href="https://64.media.tumblr.com/0db681c006fe87bb45634ca64bf3d398/1b5672df535286b8-7e/s75x75_c1/b81b7582ce6ab0d2307c82ae5fbeab581f9cf0d0.gif">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
   <link rel="preconnect" href="https://fonts.googleapis.com">
